--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -3,7 +3,7 @@
     
 <head>
     <title>Ghostbusters (1984)</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
    
